Add user bio property & Implement User Skills Management
